:poop: adicionado emoji

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </li>
       </ul>
     </article>
-    <footer><span>Thomas passou aqui</span></footer>
+    <footer><span>Thomas passou aqui 👌 top</span></footer>
   </main>
 </body>
 
