--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
         </li>
       </ul>
     </article>
-    <footer><span>Thomas passou aqui 👌 top</span></footer>
+    <footer>
+      <span>Thomas passou aqui 👌 top</span>
+      <span>Matheus passou aqui</span>
+    </footer>
   </main>
 </body>
 
