--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </article>
     <footer>
       <span>Thomas passou aqui 👌 top</span>
-      <span>Matheus passou aqui</span>
+      <span>Matheus passou aqui 👌 top</span>
     </footer>
   </main>
 </body>
